[gd_scene load_steps=7 format=3 uid="uid://bvqww8686e8x5"]

[ext_resource type="Script" path="res://Scenes/Action/action.gd" id="1_8xu0x"]
[ext_resource type="AudioStream" uid="uid://cj0idpgw2u681" path="res://Autoloads/musics/Click-Action_v1.mp3" id="2_khrpg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1eedx"]
bg_color = Color(0, 0, 0, 0.898039)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Animation" id="Animation_8jrin"]
resource_name = "blink"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.196078, 0.196078, 0.196078, 1), Color(0.592157, 0.592157, 0.592157, 1), Color(0.196078, 0.196078, 0.196078, 1)]
}

[sub_resource type="Animation" id="Animation_kic10"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d5c2q"]
_data = {
"RESET": SubResource("Animation_kic10"),
"blink": SubResource("Animation_8jrin")
}

[node name="Action" type="Node2D" groups=["action"]]
position = Vector2(302, 115)
script = ExtResource("1_8xu0x")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-13, -13, 11, -13, 12, 13, -13, 13)

[node name="TextContainer" type="PanelContainer" parent="."]
offset_left = -56.0
offset_top = 18.0
offset_right = 60.0
offset_bottom = 76.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1eedx")

[node name="MarginContainer" type="MarginContainer" parent="TextContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Text" type="Label" parent="TextContainer/MarginContainer"]
layout_mode = 2
text = "Act	ion text"

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(1, -2)
scale = Vector2(1.08333, 1.08333)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-10.1538, -6.46154, -10.1538, 9.23077, 8.30771, 9.23077, 8.30771, -6.46154)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Polygon2D")
libraries = {
"": SubResource("AnimationLibrary_d5c2q")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_khrpg")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
